<resources>
    <string name="app_name">Calculatrice</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sex">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="equals">=</string>
    <string name="commas">.</string>
    <string name="divide">÷</string>
    <string name="plusMinus">+/-</string>
    <string name="parentheses">( )</string>

    <string name="modulo">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log10</string>
    <string name="exp">e</string>
    <string name="sqrt">√</string>
    <string name="power">x²</string>

</resources>