<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-1dp">
        <!--row 0-->
        <Button
            android:id="@+id/sinBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="#FFFBFA"
            android:text="@string/sin"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/cosBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"

            android:background="#FFFBFA"
            android:text="@string/cos"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/tanBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="#FFFBFA"
            android:text="@string/tan"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="#FFFBFA"
            android:src="@drawable/delete"
            android:textColor="@color/black" />
        <!--Row 1-->
        <Button
            android:id="@+id/logBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/log"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/expBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/exp"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/sqrtBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/sqrt"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/powerBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/power"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <!--Row 2-->
        <Button
            android:id="@+id/clearBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/parenthesesBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/parentheses"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/moduloBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/modulo"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/divideBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <!--Row 3-->
        <Button
            android:id="@+id/sevenBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/eightBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/nineBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/multiplyBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <!--Row 4-->
        <Button
            android:id="@+id/fourBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/fiveBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/sexBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/sex"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <!--Row 5-->
        <Button
            android:id="@+id/oneBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/twoBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/threeBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <!--Row 6-->
        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/pointBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/commas"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/plusMinusBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/plusMinus"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/equalBTN"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="6"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/orange"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </GridLayout>

</RelativeLayout>
